news plus design profil user

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -11,6 +11,8 @@ header{
     position:relative;
     z-index: 100000;
     border-bottom: 1px solid silver;
+    width:auto;
+    background-color: white;
     h1{
         width:30%;
         float:left;
@@ -43,16 +45,6 @@ header{
     @include box-sizing(border-box);
 }
 
-header:after{
-    content:"";
-    display:block;
-    clear:both;
-    position:absolute;
-    bottom:-2px;
-    height:1px;
-    width:100%;
-    border-bottom: 1px solid white;
-}
 
 .hidden{
     position:absolute;
@@ -99,6 +91,16 @@ h6      { font-size: 0.75em;}
     //@include susy-grid-background;
 }
 
+.cont{
+    margin-top: 6em;
+    .container{
+        padding:1em;
+        position:relative;
+        border:1px solid silver;
+        @include box-sizing('border-box');
+    }
+}
+
 
 [type="submit"], .button{
     background-color: rgba(0,173,152,0.6);
@@ -122,7 +124,7 @@ h1,h2,h3,h4,h5,h6{font-family: "Avant Garde", Avantgarde, "Century Gothic", Cent
     padding:0;
     margin:auto;
     width:1483px;
-
+    background-color: white;
     transition: all 0.3s;
 }
 .container:after{
@@ -258,8 +260,11 @@ nav:after{
     }
     li{
         display:inline-block;
-        border-left: 1px solid silver;
+        border-right: 1px solid silver;
         @include box-sizing(border-box);
+    }
+    >li:first-child{
+        border-left: 1px solid silver;
     }
     a{
         text-align: center;
@@ -323,37 +328,34 @@ box-shadow: inner 0 0 5px #888;
     display:block;
     clear:both;
 }
-// nav{
- 
-//     ul{
-//     color:black;
-//     width:100%;
-//     margin:1.7em 0;
 
-//         li:first-child{
-//             border:none;
-//         }
-//         li{
-//             display: inline-block;
-//             @include box-sizing(border-box);
-//             width:16.6666667%;
-//             border-left: 0.2em solid #FF7600;
-//             a{
-//                 text-align: center;
-//                 display: block;
-//                 padding: 0.8em;
-//                 border:none;
-//                 color:black;
-//                 background-color: rgba(255,255,255,0.95);
-                
-//             }
-//             a:hover{
-//                 background-color: rgba(1, 147, 154,0.9);
-//                 color:white;
-//             }
-//         }
-//     }
-// }
+.secondaryNav{
+    position:absolute;
+    top:-3em;
+    left:-1px;
+    li{
+        display:inline-block;
+        >a{
+            text-decoration: none;
+            display:inline-block;
+            margin-right: 1em;
+            padding:0.76em;
+            background-color: rgb(230,230,230);
+            border:1px solid silver;
+            transition: background-color 0.5s;
+        }
+    }
+
+    a:hover{
+        background-color: white;
+        color:black;
+    }
+    .selected a{
+        border-bottom: 1px solid white;
+        background-color: white;
+    }
+
+}
 
 /////////----------------------------------------------------------------------------------
 /////////Footer ---------------------------------------------------------------------------
@@ -371,8 +373,7 @@ footer{
 /////////----------------------------------------------------------------------------------
 
 h2{
-    padding: 0.8em 0;
-    margin-top: 1em;
+    padding: 0.5em 0 0.8em;
     position:relative;
 }
 
@@ -575,7 +576,7 @@ form.particip{
     position:absolute;
     bottom:-2px;
     height:1px;
-    width:100%;
+    width:auto;
     border-bottom: 1px solid white;  
 }
 
@@ -597,7 +598,7 @@ select{
     border-bottom-left-radius: 0.5em;
     @include box-sizing(border-box);
     padding:0.5em;
-    background: url(../img/arrow.png) no-repeat right #fff;
+    background: url(../img/arrow.png) no-repeat right #eee;
     margin-bottom: 0.6em;
 }
 select:hover{
@@ -624,6 +625,7 @@ input[type="date"]{
         font-size: 1em;
         border:none;
         border-radius: 0.5em;
+        background-color: #eee;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         @include span-columns(3 omega,4.5);
@@ -659,7 +661,83 @@ input[type="date"]{
 /////////----------------------------------------------------------------------------------
 
 
+.achievement{
+    width:30%;
+    float:right;
+    margin-left: 0;
+    @include box-sizing(border-box);
+    padding-top: 1em;
+    ul li{
+        width:30%;
+        display:inline-block;
+        margin:0 3% 2% 0;
+        figure img{
+            width:100%;
+            max-width: 100%;
+        }
+    }
+}
 
+.user{
+    float:left;
+    width:70%;
+    @include box-sizing(border-box);
+    padding-right: 1em;
+    figure img{
+        max-width: 100%;
+        border: 0.3em solid silver;
+    }
+}
+
+.thumbLink{
+    width:20%;
+    float:left;
+    figure{
+        margin-bottom: 1em;
+    }
+}
+
+.userDescription{
+    @include box-sizing(border-box);
+    width:80%;
+    float:right;
+    padding:1em;
+    position:relative;
+    border-left:1px solid silver;
+}
+
+.userDescription:after { 
+content:""; 
+position:absolute;
+top:25px; 
+left:-23px;
+
+/* taille */ 
+height:0;width:0; 
+/* les bordures */ 
+border-width: 25px 25px 25px 0;
+border-color: transparent #FAFAFA;
+border-style: solid;
+}
+
+.userDescription:before { 
+content:""; 
+position:absolute;
+top:25px; 
+left:-25px;
+
+/* taille */ 
+/* les bordures */ 
+border-width: 25px 25px 25px 0;
+border-color: transparent silver;
+border-style: solid;
+}
+
+.activities:before{
+    content:"";
+    display:block;
+    clear:both;
+}
 
 
 
