--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -298,7 +298,7 @@ box-shadow: inner 0 0 5px #888;
     li{
         display:inline-block;
         >a{
-            text-decoration: none;
+            text-decoration: none; 
             display:inline-block;
             margin-right: 1em;
             padding:0.76em;
@@ -307,9 +307,32 @@ box-shadow: inner 0 0 5px #888;
             border-bottom:1px solid rgb(244,129,64);
             transition: background-color 0.5s;
         }
+        form{
+            display:inline-block;
+            margin-right: 1em;
+            padding:0.76em;
+            background-color: rgb(230,230,230);
+            border:1px solid silver;
+            border-bottom:1px solid rgb(244,129,64);
+            transition: background-color 0.5s;
+        }
+        form input{
+            background-color: transparent;
+            float:none;
+            border: none;
+            margin:0;
+            padding:0;
+            display:inline-block;
+            width:auto;
+            color:black;
+        }
+        form input:hover{
+            background-color: transparent;
+            color:black;
+        }
     }
 
-    a:hover{
+    a:hover, form:hover{
         background-color: white;
         border-color: rgb(244,129,64);
         color:black;
@@ -620,6 +643,13 @@ input[type="date"]{
 /////////----------------------------------------------------------------------------------
 
 
+.pagination ul{
+    li{
+        display: inline-block;
+        margin-right: 1em;
+    }
+}
+
 .achievement{
     width:30%;
     float:right;
@@ -697,6 +727,42 @@ border-style: solid;
 /////////News -----------------------------------------------------------------------------
 /////////----------------------------------------------------------------------------------
 
+.post{
+    width:auto;
+    ul li{
+        width:auto;
+    }
+    ul li:after{
+        content:"";
+        display:block;
+        clear:both;
+    }
+    input, label{
+        float:left;
+        width:50%;
+        text-align: left;
+    }
+    input{
+        margin-bottom: 1em;
+    }
+    input[type="submit"]{
+        margin-top: 2em;
+        width:20%;
+        text-align: center;
+    }
+    .cat, input[type="checkbox"]{
+        float:none;
+        width:auto;
+        display:inline-block;
+        margin-right: 0.5em;
+    }
+
+}
+.clear:after{
+    content:"";
+    display:block;
+    clear:both;
+}
 
 .news{
     h2{
@@ -717,7 +783,6 @@ border-style: solid;
         @include box-sizing(border-box);
         border:none;
         margin-bottom: 2.04082%;
-        transition: background-color, 0.5s;
         h3{
             margin-bottom: 0.8em;
             position:relative;
@@ -736,12 +801,11 @@ border-style: solid;
         width:37%;
         float:right;
         figure img{
-            @include span-columns(2,4);
+            float:left;
+
             max-width: 100%;
-            margin-top: 0.3em;
-            margin-bottom: 3%;
-            border: 0.3em solid white;
-            box-shadow: 0px 0px 8px rgb(160,160,160);
+            margin: 1em 1em 0.5em 0;
+            border: 0.3em solid silver;
         }
     }
 }
@@ -807,7 +871,9 @@ section.list{
         margin: 1.4em 0 1em;
     }
     .cover{
-        @include span-columns(10,10);
+        float:right;
+        margin: 1em 0 0.5em 1em;
+        width:25%;
         img{
             max-width: 100%;
             border:0.3em solid silver;
@@ -817,8 +883,7 @@ section.list{
     }
     .auth{
         figure{
-            @include span-columns(2 omega,10);
-            margin-left:0.5em;
+            @include span-columns(2,10);
             img{
                 width:100%;
                 border: 0.3em solid silver;
@@ -836,6 +901,16 @@ section.list{
             padding:0.5em;
             border:1px solid silver;
         }
+    }
+    
+    article{
+        margin-bottom: 2em;
+    }
+
+    article:after{
+        content:"";
+        display:block;
+        clear:both;
     }
 
     .left{
@@ -919,7 +994,7 @@ section.list{
 aside{
     h3{
         background-color: rgba(255,255,255,0.6);
-        padding:0.5em;
+        padding:0.5em 0;
     }
     width: 23%;
     float:right;
