--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -271,22 +271,16 @@ nav:after{
         text-align: center;
         padding:1.5em;
         display:block;
+        transition: background-color 0.5s;
     }
     a:hover{
-        color:white;
-        text-shadow: 0px 0px  3px black;
-        background-color: rgba(10,10,10,0.1);
-        -moz-box-shadow: inset 0 0 5px #888;
--webkit-box-shadow: inset 0 0 5px#888;
-box-shadow: inner 0 0 5px #888;
+        color:black;
+        background-color: rgba(100,100,100,0.1);
     }
 
 
     >li:hover{
-        background-color: rgba(10,10,10,0.1);
-        -moz-box-shadow: inset 0 0 5px #888;
-        -webkit-box-shadow: inset 0 0 5px#888;
-        box-shadow: inner 0 0 5px #888;
+        background-color: rgba(100,100,100,0.1);
     }
 }
 
@@ -662,6 +656,8 @@ input[type="date"]{
         margin:0 3% 2% 0;
         figure img{
             width:100%;
+            box-shadow: 0 0 5px;
+            border-radius: 50%;
             max-width: 100%;
         }
     }
