--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -7,7 +7,7 @@
 @import "compass/layout.scss";
 @import "base";
 
-@include sticky-footer(100px, ".cont", "#layout_footer", "#footer");
+@include sticky-footer(150px, ".cont", "#layout_footer", "#footer");
 
 header{
     position:relative;
@@ -32,7 +32,7 @@ header{
 
 }
 
-#race-map, #map_canvas { 
+#happening-map, #map_canvas { 
           height: 25em;
           width: auto; 
           border:0.3em solid silver;
@@ -106,6 +106,7 @@ h6      { font-size: 0.75em;}
 
 [type="submit"], .button{
     background-color: rgba(144,161,191,0.6);
+    text-align: center;
     border:none;
     cursor: pointer;
     padding:0.2em 0.5em 0.2em;
@@ -345,15 +346,37 @@ nav:after{
 
 footer{
     margin-top: 2em;
-    padding-top: 2em;
+    padding-top: 1em;
     border-top: 1px solid silver;
     width:100%;
     background-color: white;
     div{
         margin-bottom: 0;
+        div>h3{
+            margin-bottom: 0.3em;
+        }
+    }
+
+    .footDiv{
+        width: 35%;
+        float:left;
     }
 }
 
+.social{
+    width: auto;
+    float:right;
+    ul{
+        float:right;
+        li{
+            display:inline-block;
+            font-size: 2em;
+            a{
+                border:none;
+            }
+        }
+    }
+}
 
 
 /////////----------------------------------------------------------------------------------
@@ -668,42 +691,37 @@ input[type="date"]{
     width:70%;
     @include box-sizing(border-box);
     padding-right: 1em;
-    figure img{
-        max-width: 100%;
-        border: 0.3em solid silver;
+    h3{
+        margin-top: 0.6em;
     }
 }
 
 .thumbLink{
-    width:20%;
-    float:left;
+    position:relative;
+    figure img{
+        max-width: 100%;
+        border: 0.3em solid silver;
+    }
     figure{
         margin-bottom: 1em;
+    }
+
+    a{
+        position:absolute;
+        right:1em;
+        top:35%;
+        display:block;
+        width: 55%;
     }
 }
 
 .userDescription{
     @include box-sizing(border-box);
-    width:80%;
-    float:right;
-    padding:1em;
+    width:auto;
     position:relative;
-    border-left:0.3em solid rgb(244,129,64);
 }
  
 
-.userDescription:before { 
-content:""; 
-position:absolute;
-top:40px; 
-left:-16px;
-
-/* taille */ 
-/* les bordures */ 
-border-width: 1em 1em 1em 0;
-border-color: transparent rgb(244,129,64);
-border-style: solid;
-}
 
 .activities:before{
     content:"";
@@ -712,6 +730,57 @@ border-style: solid;
 }
 
 
+
+
+
+
+
+
+table{
+    border:none;
+    th:nth-child(2){
+        color:white;
+    }
+    th:nth-child(1), th:nth-child(3){
+        a{
+            color:rgb(244,129,64);
+            text-decoration: none;
+            display:block;
+            border: none;
+        }
+        &:hover{
+            background-color: rgba(81,81,81,0.5);
+            a{color:white;border: none;}
+        }
+    }
+    th{
+        background-color: rgba(81,81,81,1);
+        text-align: center;
+        border: 1px solid rgba(81,81,81,1);
+    }
+    .week td{
+        padding: 0.5em;
+        text-align: center;
+        background-color: rgb(220,220,220);
+        &:hover{
+            background-color: rgb(220,220,220);
+        }
+    }
+    td{
+        padding:0 0.5em 4em;
+        text-align: right;
+        border:1px solid silver;
+        width:1.6666667%;
+        &:hover{
+            background-color: rgba(244,129,64,0.3);
+        }
+    }
+
+    .today{
+        color:white;
+        background-color: rgb(244,129,64);
+    }
+}
 
 
 
@@ -987,16 +1056,30 @@ section.list{
     float:left;
 }
 
+.sponsorName{
+
+    position:absolute;
+    right:0.5em;
+    top:35%;
+    display:block;
+    width: 55%;
+}
+
+.sponsor{
+    position:relative;
+    margin-bottom: 0.5em;
+}
+
 aside{
     h3{
-        background-color: rgba(255,255,255,0.6);
-        padding:0.5em 0;
     }
     width: 23%;
     float:right;
     margin-left: 2%;
     img{
         max-width: 100%;
+        border-radius: 50%;
+        box-shadow: 0 0 5px;
     }
 }
 
