--- a/public/styles/fontello.css
+++ b/public/styles/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?50867601');
-  src: url('../font/fontello.eot?50867601#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?50867601') format('woff'),
-       url('../font/fontello.ttf?50867601') format('truetype'),
-       url('../font/fontello.svg?50867601#fontello') format('svg');
+  src: url('../font/fontello.eot?85223590');
+  src: url('../font/fontello.eot?85223590#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?85223590') format('woff'),
+       url('../font/fontello.ttf?85223590') format('truetype'),
+       url('../font/fontello.svg?85223590#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?50867601#fontello') format('svg');
+    src: url('../font/fontello.svg?85223590#fontello') format('svg');
   }
 }
 */
@@ -50,15 +50,46 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-user:before { content: '\e801'; } /* '' */
-.icon-pitch:before { content: '\e800'; } /* '' */
-.icon-address:before { content: '\e806'; } /* '' */
-.icon-newspaper:before { content: '\e805'; } /* '' */
-.icon-book:before { content: '\e802'; } /* '' */
-.icon-chart-area:before { content: '\e80a'; } /* '' */
-.icon-users:before { content: '\e804'; } /* '' */
+.icon-heart:before { content: '\e811'; } /* '' */
+.icon-school:before { content: '\e801'; } /* '' */
+.icon-users:before { content: '\e80f'; } /* '' */
+.icon-picture:before { content: '\e807'; } /* '' */
+.icon-camera:before { content: '\e806'; } /* '' */
+.icon-cancel:before { content: '\e802'; } /* '' */
+.icon-info-circled:before { content: '\e829'; } /* '' */
+.icon-home:before { content: '\e817'; } /* '' */
+.icon-attach:before { content: '\e82a'; } /* '' */
+.icon-tag:before { content: '\e805'; } /* '' */
+.icon-tags:before { content: '\e818'; } /* '' */
+.icon-flag:before { content: '\e819'; } /* '' */
+.icon-download-cloud:before { content: '\e82b'; } /* '' */
+.icon-edit:before { content: '\e828'; } /* '' */
+.icon-chat-1:before { content: '\e80d'; } /* '' */
+.icon-bell-alt:before { content: '\e80e'; } /* '' */
+.icon-location:before { content: '\e82c'; } /* '' */
+.icon-compass:before { content: '\e82e'; } /* '' */
+.icon-rss-squared:before { content: '\e82d'; } /* '' */
+.icon-cog:before { content: '\e81b'; } /* '' */
+.icon-calendar:before { content: '\e81a'; } /* '' */
+.icon-user:before { content: '\e810'; } /* '' */
+.icon-logout:before { content: '\e80a'; } /* '' */
+.icon-arrows-cw:before { content: '\e808'; } /* '' */
+.icon-award:before { content: '\e81c'; } /* '' */
+.icon-globe:before { content: '\e81e'; } /* '' */
+.icon-umbrella:before { content: '\e81d'; } /* '' */
+.icon-megaphone:before { content: '\e827'; } /* '' */
+.icon-sitemap:before { content: '\e80b'; } /* '' */
+.icon-ambulance:before { content: '\e826'; } /* '' */
+.icon-smile:before { content: '\e823'; } /* '' */
+.icon-frown:before { content: '\e824'; } /* '' */
+.icon-meh:before { content: '\e825'; } /* '' */
+.icon-facebook-squared:before { content: '\e820'; } /* '' */
+.icon-gplus-squared:before { content: '\e821'; } /* '' */
+.icon-twitter-squared:before { content: '\e81f'; } /* '' */
+.icon-youtube-squared:before { content: '\e822'; } /* '' */
+.icon-address:before { content: '\e80c'; } /* '' */
+.icon-book:before { content: '\e804'; } /* '' */
+.icon-chart-area:before { content: '\e812'; } /* '' */
 .icon-search:before { content: '\e803'; } /* '' */
-.icon-twitter-circled:before { content: '\e807'; } /* '' */
-.icon-facebook-circled:before { content: '\e808'; } /* '' */
-.icon-gplus-circled:before { content: '\e809'; } /* '' */
-.icon-phone:before { content: '\e80b'; } /* '' */
+.icon-pitch:before { content: '\e800'; } /* '' */
+.icon-login:before { content: '\e809'; } /* '' */
